[feature]Classloader hacks for most convinient native support.